# EpochX

./: .gitignore  README.md  README_en.md  README_zh.md  pyproject.toml
assets/research/: benchmark_research_20260405.md  benchmark_survey.md  verification_summary.md
skill/: skill.md
skill/benchmarks/: cybench.md  dabstep.md
skill/references/: claude-code-integration.md
src/cli_skill/: cli-and-workflow.md  skill.md
src/cli_skill/references/: claude-code-integration.md  core-bench.md  cybench.md  da-code.md  dabstep.md  swebench-pro.md  swebench-verified.md  tau-bench.md  terminal-bench.md
src/epochx/: __init__.py  cli.py  exporter.py  runner.py
src/epochx/adapters/: __init__.py  base.py  core_bench.py  cybench.py  da_code.py  dabstep.py  swebench_pro.py  swebench_verified.py  tau_bench.py  terminal_bench.py
src/epochx/agents/: base.py
src/epochx/core/: port_manager.py  prompt_generator.py  runtime.py  state.py  task.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_port_manager.py  test_prompt_generator.py  test_runtime.py  test_state.py
